--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 # AgaveClientTester
-Simple Command Line Program for testing Agave Client Interface (Use a guide for programs using Agave Client Interface)
+Simple Command Line Program for testing Agave Client Interface (Use as a guide for programs using Agave Client Interface)
